# ej-storage-made-simple

./: AGENTS.md  README.md  pyproject.toml
scripts/: __init__.py  _bootstrap.py  catalog_folder.py  check_rclone.py  sync_catalog.py  update_catalog_entry.py
skills/storage-add-file/: SKILL.md
skills/storage-add-file/agents/: openai.yaml
skills/storage-catalog-folder/: SKILL.md
skills/storage-catalog-folder/agents/: openai.yaml
skills/storage-remove-file/: SKILL.md
skills/storage-remove-file/agents/: openai.yaml
skills/storage-replace-file/: SKILL.md
skills/storage-replace-file/agents/: openai.yaml
skills/storage-sync-catalog/: SKILL.md
skills/storage-sync-catalog/agents/: openai.yaml
src/storage_made_simple/: __init__.py  catalog.py  mcp_server.py  operations.py  rclone.py  tagging.py
src/storage_made_simple.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tasks/: 01-discovery-and-schema.md  02-rclone-and-catalog-core.md  03-server-and-commands.md  04-skill-packaging.md  05-tests-and-validation.md
tests/: test_catalog.py  test_operations.py  test_rclone.py  test_scripts.py  test_server.py  test_tagging.py
