[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-made-simple"
version = "0.1.0"
description = "rclone-backed document catalog scaffolding"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
